@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.3.0</version>
+            <scope>test</scope>
+        </dependency>
 
 
         <dependency>
@@ -32,6 +38,8 @@
             <artifactId>ikonli-javafx</artifactId>
             <version>12.3.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.stytch.java/sdk -->
+
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-fontawesome5-pack</artifactId>
@@ -51,7 +59,7 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.2.1</version>
+            <version>11.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -133,10 +141,8 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-                <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar
+                <argLine>
                     --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    --add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
-                    --add-opens javafx.base/com.sun.javafx.event=ALL-UNNAMED
                 </argLine>
 
             </configuration>
